Add change password REST Api
